tests/NormalTests/paczka2/big_fuzzy/66997391.err
Error in line 2: kfe7qDnymoC A496 591,3
Error in line 4: kfe7qDnymoC A280 -4,3
Error in line 3: kfe7qDnymoC A280 74,0
Error in line 10: ICfNAm8 A496 69,1
Error in line 17: 112xtHP S432 34,0
Error in line 24: kUq A496 90,6
Error in line 18: pShi8O0GmGZ A280 11,9
Error in line 28: ICfNAm8 A280 90,4
Error in line 34: S432 A280 52,4
Error in line 57: kfe7qDnymoC S963 192,52
Error in line 67: kUq A496 22,0
Error in line 62: ICfNAm8 S963 108,3
Error in line 75: 1ZfgwDk7Z S432 3,2
Error in line 77: ICfNAm8 A496 98,9
Error in line 94: kUq S432 193,4
Error in line 105: 112xtHP S432 87,5
Error in line 108: ICfNAm8 A280 46,3
Error in line 122: kfe7qDnymoC A280 5,6
Error in line 130: 1ZfgwDk7Z S963 271,2
Error in line 147: 112xtHP A496 64,3
Error in line 169: pShi8O0GmGZ A496 75,4
Error in line 184: 1ZfgwDk7Z S963 182,4
Error in line 175: kUq S432 79,5
Error in line 193: 112xtHP S432 16,97
Error in line 194: 112xtHP S432 72,5
Error in line 206: S432 A280 80,2
Error in line 219: 1ZfgwDk7Z S963 -2,5
Error in line 220: pShi8O0GmGZ A280 88,1
Error in line 223: pShi8O0GmGZ S963 7,2
Error in line 217: kfe7qDnymoC S432 93,5
Error in line 227: kfe7qDnymoC A496 54,2
